

			     BZFlag release notes

BZFlag 1.11
-----------

* QuickTurn flag symbol changed from A to QT - Sean Morrison
* Added MAC's handicap game style - Sean Morrison
* Added ReverseControls bad flag - Sean Morrison
* Added Wings good flag - Dave Brosius
* Added BZDB variables to allow for more realistic friction - Nils McCarthy
* Added ForwardOnly and ReverseOnly bad flags - Sean Morrison
* bans based on hostmask (/hostban, ...) when adns is available - Nils McCarthy
* No Jumping and Trigger Happy flags - Nils McCarthy
* server option to disallow autopilot - Nils McCarthy
* SDL interface to audio/video/input - Tupone Alfredo
* Correctly read PNG textures with multiple IDAT chunks - Daniel Remenak
* /clientquery (was CLIENTQUERY) moved to server - Daniel Remenak
* "Leave Game" menu item to leave a game without quitting - Daniel Remenak
* Allow user to force input device to that of their choosing - Daniel Remenak
* Tanks can drive over bumps - Dave Brosius
* Remove Building scene nodes laying on the ground (or lower) - Dave Brosius
* Bots drive around corners faster - Frank Thilo
* Rip out the ref counted texture system, as TM controls this now - Dave Brosius
* Bots aim better, try to evade shots - Frank Thilo
* Added Admin Message Queue - Michael Hoffman

BZFlag 1.10.6
-------------

* Add support for aggressive filtering on more platforms - Sean Morrison
* bans based on hostmask (/hostban, ...) when adns is available - Nils McCarthy
* Fixed bug that allowed empty callsigns - Frank Thilo
* server option to disallow autopilot - Nils McCarthy
* Bots drive around corners faster - Frank Thilo
* Bots aim better, try to evade shots - Frank Thilo

BZFlag 1.10.4 "not a smurf"
---------------------------

* Allow user to define quickMessages via the menu system - Frank Thilo
* Defaults vars are written to config but commented out - Dave Brosius
* Added -show and -hide options to bzadmin for messages - Lars Luthman